# dev

dsl/smeargle/: README.md  pyproject.toml
dsl/smeargle/examples/: 01_minimal.py  02_formatting.py  03_conditional.py
dsl/smeargle/examples/src/: template-us-letter.typ
dsl/smeargle/smeargle/: __init__.py  cli.py  escape.py  flags.py  fork.py  formatter.py  resume.py  runtime.py
dsl/smeargle/smeargle/arena/: __init__.py  arena.py  when.py
dsl/smeargle/smeargle/blocks/: __init__.py  award.py  block.py  degree.py  job.py  list_block.py  project.py  publication.py  school.py  section_header.py  two_column.py
dsl/smeargle/smeargle/page/: __init__.py  margin.py  page_config.py  profile.py
storage/mobius/: Taskfile.yml  pyproject.toml
storage/mobius/src/mobius/: __init__.py  blueprint.py  schema.py  table.py
storage/mobius/src/mobius/column/: __init__.py  bool_column.py  bytes_column.py  column.py  date_column.py  datetime_column.py  float_column.py  int_column.py  json_column.py  string_column.py  uuid_column.py
storage/mobius/src/mobius/storage/: __init__.py  backend.py  csv.py  jsonl.py  sqlite.py
storage/mobius/tests/: conftest.py  test_blueprint.py  test_column.py  test_schema.py  test_storage_constraints.py  test_storage_contract.py  test_storage_csv.py  test_storage_derived.py  test_storage_jsonl.py  test_storage_sqlite.py  test_storage_types.py  test_table.py
tools/sockpuppet/: .gitignore  README.md  main.py  pyproject.toml  sockpuppet.toml
tools/sockpuppet/.github/workflows/: lint.yml
tools/sockpuppet/sockpuppet/: __init__.py  app.py  config.py  log.py
tools/sockpuppet/sockpuppet/backend/: __init__.py  base.py  default.py
web/time/: Dockerfile  Taskfile.yml  docker-compose.yml  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts
web/time/src/: App.tsx  app.scss  main.tsx
web/time/src/components/: AlarmInput.tsx  Clock.tsx  ColorSchemeToggle.tsx  StopButton.tsx  TimezoneSelect.tsx  clock.scss
web/time/src/hooks/: useNow.ts  (+2 more)
(+1 files in other folders)
