[project]
name = "mobius"
version = "0.1.0"
description = "Topological declarative database schema DSL"
requires-python = ">=3.14"
dependencies = []

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pyrefly>=1.1.1",
    "pytest>=9.1.1",
    "ruff>=0.15.18",
]

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
select = ["I", "Q"]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"
multiline-quotes = "double"
docstring-quotes = "double"

[tool.pyrefly]
project-includes = [
    "**/*.py*",
    "**/*.ipynb",
]

