[project]
name = "sockpuppet"
version = "0.1.0"
description = "A simple wrapper for SOCKS proxy"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "rumps>=0.4.0",
]

[project.scripts]
sockpuppet = "sockpuppet:main"

[dependency-groups]
dev = [
    "pyrefly>=1.0.0",
    "ruff>=0.15.17",
]

[tool.pyrefly]
project-includes = [
    "**/*.py*",
    "**/*.ipynb",
]
